feat: make the platform directly usable
